Query Search Optimizer added